[gd_scene load_steps=8 format=3 uid="uid://eyqahvyds7o3"]

[ext_resource type="Script" uid="uid://d1xme41n1p2wa" path="res://scripts/problem_view.gd" id="1_dmijy"]
[ext_resource type="PackedScene" uid="uid://dqbsyjm472g3s" path="res://components/header.tscn" id="2_dmijy"]
[ext_resource type="PackedScene" uid="uid://ci2i2gvdbyciv" path="res://components/content_problem.tscn" id="3_2edo6"]
[ext_resource type="Theme" uid="uid://cc6pd6kgs8ds2" path="res://theme/main.tres" id="3_l02yn"]
[ext_resource type="Texture2D" uid="uid://bads18hn644i2" path="res://icons/bulb-w.png" id="5_dmijy"]
[ext_resource type="PackedScene" uid="uid://dtcl56kq2beg1" path="res://components/nav_bar.tscn" id="5_s6c3e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2edo6"]
bg_color = Color(0.14902, 0.14902, 0.219608, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.141176, 0.141176, 0.141176, 0.952941)
shadow_size = 10
shadow_offset = Vector2(2, 2)

[node name="ProblemView" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmijy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header2" parent="VBoxContainer" instance=ExtResource("2_dmijy")]
layout_mode = 2

[node name="CenterContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("3_l02yn")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/CenterContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(150, 90)
layout_mode = 2
icon = ExtResource("5_dmijy")
icon_alignment = 1

[node name="ContentProblem" parent="VBoxContainer" instance=ExtResource("3_2edo6")]
layout_mode = 2
size_flags_vertical = 3

[node name="NavBar" parent="VBoxContainer" instance=ExtResource("5_s6c3e")]
layout_mode = 2

[node name="PopupPanelError" type="PopupPanel" parent="."]
mode = 3
title = "Error"
initial_position = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_2edo6")

[node name="MarginContainer" type="MarginContainer" parent="PopupPanelError"]
offset_left = 1.0
offset_top = 1.0
offset_right = 390.0
offset_bottom = 159.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanelError/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="LabelError" type="Label" parent="PopupPanelError/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Problem sending to Wall"

[node name="ButtonOk" type="Button" parent="PopupPanelError/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ok"

[connection signal="pressed" from="VBoxContainer/CenterContainer/Panel/MarginContainer/CenterContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PopupPanelError/MarginContainer/VBoxContainer/ButtonOk" to="." method="_on_button_ok_pressed"]
